--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<h1>Feedback Form</h1>
+	<form method = "post">
+		<div>
+			<label for = "name">Name</label>
+			<input id = name type = "text" minlength = "3" maxlength = "50"/>
+		</div>
+		<div>
+			<label for = "portfolio">Portfolio</label>
+			<input type = "url" id = "portfolio"/>
+		</div>
+		<div>
+			<label for = "color">favColor</label>
+			<input type = "color" id = "favcolor"/>
+		</div>
+		<div>
+			<label for = "likeness">Likeness</label>
+			<input type = "range" id = "likeness"/>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
